--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://msaavedramartnez:Abcdin246.@cluster0.mt1aets.mongodb.net/MiApp?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://Warry:MisterMondongus1.@cluster0.mt1aets.mongodb.net/MiApp?retryWrites=true&w=majority
