--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,7 +15,7 @@
     "webpack": "^5.89.0"
   },
   "scripts": {
-    "start": "index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
