--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://Warry:MisterMondongus1.@cluster0.mt1aets.mongodb.net/MiApp?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://Mati:Sencilla12.@clusteraseguradora.2tks3c7.mongodb.net/AsistenciaAutomotriz?retryWrites=true&w=majority
