--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.89.0"
+    "webpack": "^5.89.0",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
